force-app/main/default/objects/Renewal_Survey__c/Renewal_Survey__c.object-meta.xml
<CustomObject>
    <label>Renewal Survey</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Renewal Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>