force-app/main/default/objects/Renewal_Survey__c/fields/Primary_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Location__c</fullName>
    <label>Primary Work Location</label>
    <type>TextArea</type>
</CustomField>