force-app/main/default/objects/Renewal_Survey__c/fields/Short_Term_Disability_Goal__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Disability_Goal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Short Term Disability Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>